--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@lezer/json",
+  "name": "@codemovie/grammar-json-with-comments",
   "version": "1.0.3",
-  "description": "lezer-based JSON grammar",
+  "description": "lezer-based JSON grammar with optional comments",
   "main": "dist/index.cjs",
   "type": "module",
   "exports": {
@@ -10,7 +10,7 @@
   },
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
-  "author": "Arun Srinivasan <rulfzid@gmail.com>",
+  "author": "Peter  Kröner <peter@peterkroener.de>",
   "license": "MIT",
   "devDependencies": {
     "@lezer/generator": "^1.0.0",
@@ -25,7 +25,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/lezer-parser/json.git"
+    "url": "https://github.com/CodeMovie/grammar-json-with-comments.git"
   },
   "scripts": {
     "build": "lezer-generator src/json.grammar -o src/parser && rollup -c",
